test/Fail/AmbiguousSet1b.agda
{-# OPTIONS --no-import-sorts #-}

open import Agda.Primitive using (Prop)

postulate
  Set₁ : Prop

open import Agda.Primitive using (Set)

postulate
  A : Set₁
